--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
         "ts-node": "^10.5.0"
     },
     "dependencies": {
+        "@types/mysql": "^2.15.21",
         "body-parser": "^1.19.2",
         "dotenv": "^16.0.0",
-        "express": "^4.17.3"
+        "express": "^4.17.3",
+        "mysql": "^2.18.1"
     }
 }
